--- a/clashN/clashN/Views/ProxiesView.xaml
+++ b/clashN/clashN/Views/ProxiesView.xaml
@@ -156,6 +156,7 @@
                                 <Border
                                     Width="5"
                                     Height="auto"
+                                    Margin="0,1"
                                     Background="{DynamicResource PrimaryHueLightBrush}"
                                     CornerRadius="4"
                                     DockPanel.Dock="Left"
