--- a/clashN/clashN/Views/ProfilesView.xaml
+++ b/clashN/clashN/Views/ProfilesView.xaml
@@ -102,6 +102,7 @@
                             <Border
                                 Width="5"
                                 Height="auto"
+                                Margin="0,1"
                                 Background="{DynamicResource PrimaryHueLightBrush}"
                                 CornerRadius="4"
                                 DockPanel.Dock="Left"
