--- a/clashN/clashN/Views/GlobalHotkeySettingWindow.xaml
+++ b/clashN/clashN/Views/GlobalHotkeySettingWindow.xaml
@@ -34,7 +34,7 @@
             <Grid
                 x:Name="gridText"
                 Grid.Row="0"
-                Margin="16">
+                Margin="8">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
@@ -51,14 +51,14 @@
                 <TextBlock
                     Grid.Row="0"
                     Grid.Column="0"
-                    Margin="8"
+                    Margin="4"
                     Style="{StaticResource ModuleTitle}"
                     Text="{x:Static resx:ResUI.TbGlobalHotkeySetting}" />
 
                 <TextBlock
                     Grid.Row="1"
                     Grid.Column="0"
-                    Margin="8"
+                    Margin="4"
                     VerticalAlignment="Center"
                     Style="{StaticResource ListItemTitle}"
                     Text="{x:Static resx:ResUI.TbDisplayGUI}" />
@@ -67,7 +67,7 @@
                     x:Name="txtGlobalHotkey0"
                     Grid.Row="1"
                     Grid.Column="1"
-                    Margin="8"
+                    Margin="4"
                     VerticalAlignment="Top"
                     AcceptsReturn="True"
                     IsReadOnly="True"
@@ -76,7 +76,7 @@
                 <TextBlock
                     Grid.Row="2"
                     Grid.Column="0"
-                    Margin="8"
+                    Margin="4"
                     VerticalAlignment="Center"
                     Style="{StaticResource ListItemTitle}"
                     Text="{x:Static resx:ResUI.TbClearSystemProxy}" />
@@ -84,7 +84,7 @@
                     x:Name="txtGlobalHotkey1"
                     Grid.Row="2"
                     Grid.Column="1"
-                    Margin="8"
+                    Margin="4"
                     VerticalAlignment="Top"
                     AcceptsReturn="True"
                     IsReadOnly="True"
@@ -93,7 +93,7 @@
                 <TextBlock
                     Grid.Row="3"
                     Grid.Column="0"
-                    Margin="8"
+                    Margin="4"
                     VerticalAlignment="Center"
                     Style="{StaticResource ListItemTitle}"
                     Text="{x:Static resx:ResUI.TbSetSystemProxy}" />
@@ -101,7 +101,7 @@
                     x:Name="txtGlobalHotkey2"
                     Grid.Row="3"
                     Grid.Column="1"
-                    Margin="8"
+                    Margin="4"
                     VerticalAlignment="Top"
                     AcceptsReturn="True"
                     IsReadOnly="True"
@@ -109,7 +109,7 @@
                 <TextBlock
                     Grid.Row="4"
                     Grid.Column="0"
-                    Margin="8"
+                    Margin="4"
                     VerticalAlignment="Center"
                     Style="{StaticResource ListItemTitle}"
                     Text="{x:Static resx:ResUI.TbNotChangeSystemProxy}" />
@@ -117,17 +117,32 @@
                     x:Name="txtGlobalHotkey3"
                     Grid.Row="4"
                     Grid.Column="1"
-                    Margin="8"
+                    Margin="4"
                     VerticalAlignment="Top"
                     AcceptsReturn="True"
                     IsReadOnly="True"
                     Style="{StaticResource MaterialDesignOutlinedTextBox}" />
-
+                <TextBlock
+                    Grid.Row="5"
+                    Grid.Column="0"
+                    Margin="4"
+                    VerticalAlignment="Center"
+                    Style="{StaticResource ListItemTitle}"
+                    Text="{x:Static resx:ResUI.TbSystemProxyPac}" />
+                <TextBox
+                    x:Name="txtGlobalHotkey4"
+                    Grid.Row="5"
+                    Grid.Column="1"
+                    Margin="4"
+                    VerticalAlignment="Top"
+                    AcceptsReturn="True"
+                    IsReadOnly="True"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}" />
             </Grid>
 
             <TextBlock
                 Grid.Row="1"
-                Margin="8"
+                Margin="4"
                 VerticalAlignment="Center"
                 Style="{StaticResource ListItemTitle}"
                 Text="{x:Static resx:ResUI.TbGlobalHotkeySettingTip}" />
@@ -144,21 +159,21 @@
                 <Button
                     x:Name="btnReset"
                     Grid.Column="0"
-                    Margin="8"
+                    Margin="4"
                     Click="btnReset_Click"
                     Content="{x:Static resx:ResUI.TbReset}"
                     Style="{StaticResource DefButton}" />
                 <Button
                     x:Name="btnSave"
                     Grid.Column="1"
-                    Margin="8"
+                    Margin="4"
                     Click="btnSave_Click"
                     Content="{x:Static resx:ResUI.TbConfirm}"
                     Style="{StaticResource DefButton}" />
                 <Button
                     x:Name="btnCancel"
                     Grid.Column="2"
-                    Margin="8"
+                    Margin="4"
                     Click="btnCancel_Click"
                     Content="{x:Static resx:ResUI.TbCancel}"
                     Style="{StaticResource DefButton}" />
