--- a/clashN/clashN/App.xaml
+++ b/clashN/clashN/App.xaml
@@ -2,6 +2,7 @@
     x:Class="clashN.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:conv="clr-namespace:clashN.Converters"
     xmlns:local="clr-namespace:clashN"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     ShutdownMode="OnExplicitShutdown"
@@ -97,6 +98,7 @@
                 BasedOn="{StaticResource MaterialDesignContextMenu}"
                 TargetType="{x:Type ContextMenu}">
                 <Setter Property="FontSize" Value="13" />
+                <Setter Property="FontFamily" Value="{x:Static conv:MaterialDesignFonts.MyFont}" />
             </Style>
             <Style
                 x:Key="DefComboBox"
