--- a/clashN/clashN/Views/MainWindow.xaml
+++ b/clashN/clashN/Views/MainWindow.xaml
@@ -2,6 +2,7 @@
     x:Class="clashN.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:conv="clr-namespace:clashN.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:clashN.Views"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
@@ -17,7 +18,9 @@
     MinHeight="600"
     x:TypeArguments="vms:MainWindowViewModel"
     Background="{DynamicResource MaterialDesignPaper}"
+    FontFamily="{x:Static conv:MaterialDesignFonts.MyFont}"
     ShowInTaskbar="True"
+    TextElement.FontFamily="{x:Static conv:MaterialDesignFonts.MyFont}"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Display"
     TextOptions.TextRenderingMode="Auto"
