--- a/clashN/clashN/Views/PorfileEditWindow.xaml
+++ b/clashN/clashN/Views/PorfileEditWindow.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Views="clr-namespace:clashN.Views"
+    xmlns:conv="clr-namespace:clashN.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:clashN"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
@@ -15,8 +16,10 @@
     Height="600"
     x:TypeArguments="vms:ProfileEditViewModel"
     Background="{DynamicResource MaterialDesignPaper}"
+    FontFamily="{x:Static conv:MaterialDesignFonts.MyFont}"
     KeyDown="PorfileEditWindow_KeyDown"
     ResizeMode="NoResize"
+    TextElement.FontFamily="{x:Static conv:MaterialDesignFonts.MyFont}"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Display"
     TextOptions.TextRenderingMode="Auto"
