--- a/clashN/clashN/Views/GlobalHotkeySettingWindow.xaml
+++ b/clashN/clashN/Views/GlobalHotkeySettingWindow.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:Views="clr-namespace:clashN.Views"
+    xmlns:conv="clr-namespace:clashN.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -14,8 +15,10 @@
     Height="500"
     x:TypeArguments="vms:ProfileEditViewModel"
     Background="{DynamicResource MaterialDesignPaper}"
+    FontFamily="{x:Static conv:MaterialDesignFonts.MyFont}"
     KeyDown="GlobalHotkeySettingWindow_KeyDown"
     ResizeMode="NoResize"
+    TextElement.FontFamily="{x:Static conv:MaterialDesignFonts.MyFont}"
     TextElement.Foreground="{DynamicResource MaterialDesignBody}"
     TextOptions.TextFormattingMode="Display"
     TextOptions.TextRenderingMode="Auto"
@@ -68,7 +71,7 @@
                     VerticalAlignment="Top"
                     AcceptsReturn="True"
                     IsReadOnly="True"
-                    Style="{StaticResource MaterialDesignOutlinedTextBox}" />
+                    Style="{StaticResource MyOutlinedTextBox}" />
 
                 <TextBlock
                     Grid.Row="2"
@@ -85,7 +88,7 @@
                     VerticalAlignment="Top"
                     AcceptsReturn="True"
                     IsReadOnly="True"
-                    Style="{StaticResource MaterialDesignOutlinedTextBox}" />
+                    Style="{StaticResource MyOutlinedTextBox}" />
 
                 <TextBlock
                     Grid.Row="3"
@@ -102,7 +105,7 @@
                     VerticalAlignment="Top"
                     AcceptsReturn="True"
                     IsReadOnly="True"
-                    Style="{StaticResource MaterialDesignOutlinedTextBox}" />
+                    Style="{StaticResource MyOutlinedTextBox}" />
                 <TextBlock
                     Grid.Row="4"
                     Grid.Column="0"
@@ -118,7 +121,7 @@
                     VerticalAlignment="Top"
                     AcceptsReturn="True"
                     IsReadOnly="True"
-                    Style="{StaticResource MaterialDesignOutlinedTextBox}" />
+                    Style="{StaticResource MyOutlinedTextBox}" />
                 <TextBlock
                     Grid.Row="5"
                     Grid.Column="0"
@@ -134,7 +137,7 @@
                     VerticalAlignment="Top"
                     AcceptsReturn="True"
                     IsReadOnly="True"
-                    Style="{StaticResource MaterialDesignOutlinedTextBox}" />
+                    Style="{StaticResource MyOutlinedTextBox}" />
             </Grid>
 
             <TextBlock
