--- a/clashN/clashN/App.xaml
+++ b/clashN/clashN/App.xaml
@@ -1,9 +1,9 @@
 ﻿<Application
-    x:Class="clashN.App"
+    x:Class="ClashN.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:conv="clr-namespace:clashN.Converters"
-    xmlns:local="clr-namespace:clashN"
+    xmlns:conv="clr-namespace:ClashN.Converters"
+    xmlns:local="clr-namespace:ClashN"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     ShutdownMode="OnExplicitShutdown"
     StartupUri="Views/MainWindow.xaml">
