--- a/clashN/clashN/Views/MainWindow.xaml
+++ b/clashN/clashN/Views/MainWindow.xaml
@@ -1,16 +1,16 @@
 <reactiveui:ReactiveWindow
-    x:Class="clashN.Views.MainWindow"
+    x:Class="ClashN.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:conv="clr-namespace:clashN.Converters"
+    xmlns:conv="clr-namespace:ClashN.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:clashN.Views"
+    xmlns:local="clr-namespace:ClashN.Views"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:reactiveui="http://reactiveui.net"
-    xmlns:resx="clr-namespace:clashN.Resx"
+    xmlns:resx="clr-namespace:ClashN.Resx"
     xmlns:tb="http://www.hardcodet.net/taskbar"
-    xmlns:vms="clr-namespace:clashN.ViewModels"
+    xmlns:vms="clr-namespace:ClashN.ViewModels"
     Title="clashN"
     Width="900"
     Height="680"
