--- a/clashN/clashN/Views/PorfileEditWindow.xaml
+++ b/clashN/clashN/Views/PorfileEditWindow.xaml
@@ -66,7 +66,7 @@
                     Margin="4"
                     VerticalAlignment="Center"
                     Style="{StaticResource ListItemTitle}"
-                    Text="{x:Static resx:ResUI.TbAlias}" />
+                    Text="{x:Static resx:ResUI.TbRemark}" />
 
                 <TextBox
                     x:Name="txtRemarks"
